<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.tolgakurucay.mynotebook.views.login.ILoginFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/extra_large_padding"
        tools:context=".views.login.LoginFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_sign_in_background"
            android:src="@drawable/blur_icon" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_pages_title_margin"
                    android:text="@string/signin"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:hint="@string/email"
                    android:textColorHint="@color/black"
                    app:helperText="@string/enteranmail"
                    app:helperTextEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                    app:startIconDrawable="@drawable/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailSignInInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/screen_background_light_transparent"
                        android:inputType="textPostalAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordSignInLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    app:helperText="@string/enteranpassword"
                    app:helperTextEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordSignInInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/screen_background_light_transparent"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/txtForgotYourPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:onClick="@{() -> listener.onForgotPasswordClick()}"
                    android:text="@string/forgotyourpassword"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordSignInLayout" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:background="@android:drawable/screen_background_light_transparent"
                    android:onClick="@{() -> listener.onSignInClick()}"
                    android:text="@string/sign_in_now"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/txtForgotYourPassword" />

                <TextView
                    android:id="@+id/txtDontHaveAnAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/donthaveanaccount"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

                <TextView
                    android:id="@+id/textViewRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:gravity="center"
                    android:onClick="@{() -> listener.onSignUpClick()}"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="@id/txtOrSignInWith"
                    app:layout_constraintEnd_toStartOf="@id/txtOrSignInWith"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtOrSignInWith" />

                <TextView
                    android:id="@+id/txtOrSignInWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:includeFontPadding="false"
                    android:text="@string/orsigninwith"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDontHaveAnAccount" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    app:layout_constraintBottom_toBottomOf="@id/txtOrSignInWith"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/txtOrSignInWith"
                    app:layout_constraintTop_toTopOf="@id/txtOrSignInWith" />


                <ImageButton
                    android:id="@+id/ibGoogleSignIn"
                    android:layout_width="@dimen/image_size_extra_large"
                    android:layout_height="@dimen/image_size_extra_large"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/content_desc_google_sign_in"
                    android:onClick="@{() -> listener.onGoogleSignInClick()}"
                    android:scaleType="centerCrop"
                    android:src="@drawable/google_sign"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtOrSignInWith" />


                <ImageButton
                    android:id="@+id/ibPhoneSignIn"
                    android:layout_width="@dimen/image_size_extra_large"
                    android:layout_height="@dimen/image_size_extra_large"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/content_desc_phone_sign_ın"
                    android:onClick="@{() -> listener.onPhoneSignInClick()}"
                    android:scaleType="centerCrop"
                    android:src="@drawable/phone_sign"
                    app:layout_constraintEnd_toStartOf="@id/ibFacebookSignIn"
                    app:layout_constraintStart_toEndOf="@id/ibGoogleSignIn"
                    app:layout_constraintTop_toBottomOf="@id/txtOrSignInWith" />

                <ImageButton
                    android:id="@+id/ibFacebookSignIn"
                    android:layout_width="@dimen/image_size_extra_large"
                    android:layout_height="@dimen/image_size_extra_large"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/content_desc_facebook_sign_in"
                    android:onClick="@{() -> listener.onFacebookSignInClick()}"
                    android:scaleType="centerCrop"
                    android:src="@drawable/facebook_sign"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtOrSignInWith" />

                <ProgressBar
                    android:id="@+id/progressBarLogin"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </RelativeLayout>


</layout>


